<resources>
    <string name="app_name">App PlaceHolder</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">The password is invalid!</string>
    <string name="invalid_email">The email is invalid!</string>
    <string name="invalid_nickname">The nickname is invalid!</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_profile">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_post">Post</string>
    <string name="title_suggestion">Suggestion</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="signup_successful">Signup Successful!</string>
    <string name="user_already_exists">A user with these email or nickname already exists!</string>
    <string name="cannot_signup">An error has occurred on signup!</string>
    <string name="title_empty">Provide a title!</string>
    <string name="suggestion_type_empty">Select a suggestion type!</string>
    <string name="follow_person_text">Follow</string>
    <string name="unfollow_person_text">Unfollow</string>
    <string name="suggestion_published">Suggestion published successfully!</string>
    <string name="suggestion_not_published">An error occurred when publishing your suggestion!</string>
    <string name="storage_permission_not_granted">You must grant this permission in order to select an image!</string>
</resources>