<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.placeholder.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.placeholder.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/search_fragment" />

    <fragment
        android:id="@+id/navigation_post"
        android:name="com.example.placeholder.ui.post.PostFragment"
        android:label="@string/title_post"
        tools:layout="@layout/post_fragment" />

    <fragment
        android:id="@+id/navigation_suggestion"
        android:name="com.example.placeholder.ui.suggestion.SuggestionFragment"
        android:label="@string/title_suggestion"
        tools:layout="@layout/suggestion_fragment" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.placeholder.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment" />
</navigation>